--- a/style.css
+++ b/style.css
@@ -20,37 +20,30 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+  display: block; }
 
 body {
-  line-height: 1;
-}
+  line-height: 1; }
 
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
 blockquote, q {
-  quotes: none;
-}
+  quotes: none; }
 
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
-  content: none;
-}
+  content: none; }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
 
 html {
   background-color: #ecf0f4;
@@ -59,14 +52,12 @@ html {
   font-size: 18px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 @media only screen and (min-width: 1000px) {
   .wrapper {
@@ -76,8 +67,7 @@ html {
     top: 50%;
     left: 50%;
     margin-top: -345px;
-    margin-left: -540px;
-  }
+    margin-left: -540px; }
 
   h1 {
     height: 32px;
@@ -86,8 +76,7 @@ html {
     color: white;
     padding-left: 24px;
     border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
+    border-top-right-radius: 8px; }
 
   .row {
     background-color: white;
@@ -95,8 +84,7 @@ html {
     padding-top: 24px;
     padding-left: 24px;
     border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
+    border-bottom-right-radius: 8px; }
 
   input {
     height: 32px;
@@ -107,141 +95,116 @@ html {
     border: none;
     border-radius: 4px;
     margin-right: 24px;
-    margin-bottom: 24px;
-  }
+    margin-bottom: 24px; }
 
   input::placeholder {
-    color: #788088;
-  }
+    color: #788088; }
 
   select {
     height: 24px;
     border: none;
     background-color: #ecf0f4;
-    border-radius: 4px;
-  }
+    border-radius: 4px; }
 
   .leftSize {
     width: 672px;
     float: left;
-    margin-right: 24px;
-  }
+    margin-right: 24px; }
 
   .rightSize {
     width: 384px;
-    float: right;
-  }
+    float: right; }
 
   .marginTop {
-    margin-top: 24px;
-  }
+    margin-top: 24px; }
 
   .leftSelect {
     height: 32px;
     margin-right: 24px;
     margin-bottom: 24px;
-    font-size: 18px;
-  }
+    font-size: 18px; }
 
   .widthOne {
-    width: 192px;
-  }
+    width: 192px; }
 
   .widthTwo {
-    width: 408px;
-  }
+    width: 408px; }
 
   .widthQuarter {
-    width: 138px;
-  }
+    width: 138px; }
 
   .widthHA {
-    width: 120px;
-  }
+    width: 120px; }
 
   .minusCheckbox {
-    width: 136px;
-  }
+    width: 136px; }
 
   .checkbox {
     width: 32px;
     padding: 0;
     margin: 0 24px 24px 0;
-    float: right;
-  }
+    float: right; }
 
   .leftP {
     float: left;
-    line-height: 48px;
-  }
+    line-height: 42px; }
 
   .rightP {
     float: right;
-    line-height: 48px;
+    line-height: 42px;
     margin-right: 24px;
     width: 72px;
-    text-align: right;
-  }
+    text-align: right; }
 
   .adjust {
     float: right;
     width: 60px;
-    margin: 12px;
-  }
+    margin: 9px; }
 
   .small {
     color: #aab0b6;
-    font-size: 14px;
-  }
+    font-size: 14px; }
 
   hr {
     border: none;
     border-top: 1px solid #d8dce0;
     margin: 0;
     margin-right: 24px;
-    clear: both;
-  }
+    clear: both; }
 
   .help {
     line-height: 48px;
     text-decoration: none;
     color: #aab0b6;
-    font-size: 14px;
-  }
+    font-size: 14px; }
 
   button {
     width: 336px;
     height: 96px;
     border: none;
     border-radius: 8px;
-    margin: 123px 0 24px 0;
+    margin: 74px 0 24px 0;
     font-size: 36px;
     font-family: Helvetica, Arial, sans-serif;
     background-color: #72bf44;
     color: white;
     cursor: pointer;
     text-shadow: 1px 1px 2px #457528;
-    outline: none;
-  }
+    outline: none; }
 
   button:hover {
-    box-shadow: inset 0 0 24px #50882f;
-  }
+    box-shadow: inset 0 0 24px #50882f; }
 
   button:active {
-    background-color: #5b9b35;
-  }
-}
+    background-color: #5b9b35; } }
 @media only screen and (max-width: 1000px) {
   html {
-    width: 720px;
-  }
+    width: 720px; }
 
   .wrapper {
     position: relative;
     width: 672px;
-    margin: auto;
-  }
+    margin: auto; }
 
   h1 {
     height: 32px;
@@ -251,8 +214,7 @@ html {
     padding-left: 24px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    margin-top: 24px;
-  }
+    margin-top: 24px; }
 
   .row {
     background-color: white;
@@ -260,8 +222,7 @@ html {
     padding-top: 24px;
     padding-left: 24px;
     border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
+    border-bottom-right-radius: 8px; }
 
   input {
     height: 32px;
@@ -272,109 +233,89 @@ html {
     border: none;
     border-radius: 4px;
     margin-right: 24px;
-    margin-bottom: 24px;
-  }
+    margin-bottom: 24px; }
 
   input::placeholder {
-    color: #788088;
-  }
+    color: #788088; }
 
   select {
     height: 24px;
     border: none;
     background-color: #ecf0f4;
-    border-radius: 4px;
-  }
+    border-radius: 4px; }
 
   .leftSize {
     width: 672px;
-    margin-right: 24px;
-  }
+    margin-right: 24px; }
 
   .rightSize {
-    width: 672px;
-  }
+    width: 672px; }
 
   div.rightSize {
-    margin-bottom: 24px;
-  }
+    margin-bottom: 24px; }
 
   .marginTop {
-    margin-top: 24px;
-  }
+    margin-top: 24px; }
 
   .leftSelect {
     height: 32px;
     margin-right: 24px;
     margin-bottom: 24px;
-    font-size: 18px;
-  }
+    font-size: 18px; }
 
   .widthOne {
-    width: 192px;
-  }
+    width: 192px; }
 
   .widthTwo {
-    width: 408px;
-  }
+    width: 408px; }
 
   .widthQuarter {
-    width: 138px;
-  }
+    width: 138px; }
 
   .widthHA {
-    width: 120px;
-  }
+    width: 120px; }
 
   .minusCheckbox {
-    width: 136px;
-  }
+    width: 136px; }
 
   .checkbox {
     width: 32px;
     padding: 0;
     margin: 0 24px 24px 0;
-    float: right;
-  }
+    float: right; }
 
   .leftP {
     float: left;
-    line-height: 48px;
-  }
+    line-height: 48px; }
 
   .rightP {
     float: right;
     line-height: 48px;
     margin-right: 24px;
     width: 72px;
-    text-align: right;
-  }
+    text-align: right; }
 
   .adjust {
     float: right;
     width: 60px;
-    margin: 12px;
-  }
+    margin: 12px; }
 
   .small {
     color: #aab0b6;
-    font-size: 14px;
-  }
+    font-size: 14px; }
 
   hr {
     border: none;
     border-top: 1px solid #d8dce0;
     margin: 0;
     margin-right: 24px;
-    clear: both;
-  }
+    clear: both; }
 
   .help {
     line-height: 48px;
     text-decoration: none;
     color: #aab0b6;
-    font-size: 14px;
-  }
+    font-size: 14px; }
 
   button {
     width: 624px;
@@ -388,16 +329,10 @@ html {
     color: white;
     cursor: pointer;
     text-shadow: 1px 1px 2px #457528;
-    outline: none;
-  }
+    outline: none; }
 
   button:hover {
-    box-shadow: inset 0 0 24px #50882f;
-  }
+    box-shadow: inset 0 0 24px #50882f; }
 
   button:active {
-    background-color: #5b9b35;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
+    background-color: #5b9b35; } }
