--- a/style.scss
+++ b/style.scss
@@ -3,48 +3,129 @@
 	License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 // ---- VARIABLES ---- //
@@ -68,367 +149,370 @@ $sixth: 4px;
 // ---- PAGE STRUCTURE ---- //
 
 html {
-	background-color: $lightestGray;
-	color: $darkBlue;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 18px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+  background-color: $lightestGray;
+  color: $darkBlue;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*, *:before, *:after {
-	-webkit-box-sizing: inherit;
-	-moz-box-sizing: inherit;
-	box-sizing: inherit;
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 @media only screen and (min-width: 1000px) {
+  .wrapper {
+    position: absolute;
+    width: $unit * 45;
+    height: 690px;
+    top: 50%;
+    left: 50%;
+    margin-top: -(690px / 2);
+    margin-left: -($unit * 22.5);
+  }
 
-	.wrapper {
-		position: absolute;
-		width: $unit * 45;
-		height: 690px;
-		top: 50%;
-		left: 50%;
-		margin-top: -(690px / 2);
-		margin-left: -($unit * 22.5);
-	}
+  h1 {
+    height: $input;
+    line-height: $input + 3;
+    background-color: $lightBlue;
+    color: white;
+    padding-left: $unit;
+    border-top-left-radius: $sixth * 2;
+    border-top-right-radius: $sixth * 2;
+  }
 
-	h1 {
-		height: $input;
-		line-height: $input + 3;
-		background-color: $lightBlue;
-		color: white;
-		padding-left: $unit;
-		border-top-left-radius: $sixth * 2;
-		border-top-right-radius: $sixth * 2;
-	}
+  .row {
+    background-color: white;
+    border-top: none;
+    padding-top: $unit;
+    padding-left: $unit;
+    border-bottom-left-radius: $sixth * 2;
+    border-bottom-right-radius: $sixth * 2;
+  }
 
-	.row {
-		background-color: white;
-		border-top: none;
-		padding-top: $unit;
-		padding-left: $unit;
-		border-bottom-left-radius: $sixth * 2;
-		border-bottom-right-radius: $sixth * 2;
-	}
+  input {
+    height: $input;
+    width: $unit * 8;
+    padding-left: 8px;
+    background-color: $lightestGray;
+    font-size: 18px;
+    border: none;
+    border-radius: $sixth;
+    margin-right: $unit;
+    margin-bottom: $unit;
+  }
 
-	input {
-		height: $input;
-		width: $unit * 8;
-		padding-left: 8px;
-		background-color: $lightestGray;
-		font-size: 18px;
-		border: none;
-		border-radius: $sixth;
-		margin-right: $unit;
-		margin-bottom: $unit;
-	}
+  input::placeholder {
+    color: $coolGray;
+  }
 
-	input::placeholder {
-		color: $coolGray;
-	}
+  select {
+    height: $unit;
+    border: none;
+    background-color: $lightestGray;
+    border-radius: $sixth;
+  }
 
-	select {
-		height: $unit;
-		border: none;
-		background-color: $lightestGray;
-		border-radius: $sixth;
-	}
+  .leftSize {
+    width: $unit * 28;
+    float: left;
+    margin-right: $unit;
+  }
 
-	.leftSize {
-		width: $unit * 28;
-		float: left;
-		margin-right: $unit;
-	}
+  .rightSize {
+    width: $unit * 16;
+    float: right;
+  }
 
-	.rightSize {
-		width: $unit * 16;
-		float: right;
-	}
+  .marginTop {
+    margin-top: $unit;
+  }
 
-	.marginTop {
-		margin-top: $unit;
-	}
+  .leftSelect {
+    height: $input;
+    margin-right: $unit;
+    margin-bottom: $unit;
+    font-size: 18px;
+  }
 
-	.leftSelect {
-		height: $input;
-		margin-right: $unit;
-		margin-bottom: $unit;
-		font-size: 18px;
-	}
+  .widthOne {
+    width: $unit * 8;
+  }
 
-	.widthOne {
-		width: $unit * 8;
-	}
+  .widthTwo {
+    width: $unit * 17;
+  }
 
-	.widthTwo {
-		width: $unit * 17;
-	}
+  .widthQuarter {
+    width: $unit * 5.75;
+  }
 
-	.widthQuarter {
-		width: $unit * 5.75;
-	}
+  .widthHA {
+    width: $unit * 5;
+  }
 
-	.widthHA {
-		width: $unit * 5;
-	}
+  .minusCheckbox {
+    width: $unit * 8 - 56;
+  }
 
-	.minusCheckbox {
-		width: $unit * 8 - 56;
-	}
+  .checkbox {
+    width: $input;
+    padding: 0;
+    margin: 0 $unit $unit 0;
+    float: right;
+  }
 
-	.checkbox {
-		width: $input;
-		padding: 0;
-		margin: 0 $unit $unit 0;
-		float: right;
-	}
+  #qty1,
+  #qty2,
+  #qty3,
+  #qty4,
+  #qty5,
+  #qty6 {
+    cursor: pointer;
+  }
 
-	#qty1, #qty2, #qty3, #qty4, #qty5, #qty6 {
-		cursor: pointer;
-	}
+  .leftP {
+    float: left;
+    line-height: 42px;
+  }
 
-	.leftP {
-		float: left;
-		line-height: 42px;
-	}
+  .rightP {
+    float: right;
+    line-height: 42px;
+    margin-right: $unit;
+    width: $unit * 3;
+    text-align: right;
+  }
 
-	.rightP {
-		float: right;
-		line-height: 42px;
-		margin-right: $unit;
-		width: $unit * 3;
-		text-align: right;
-	}
+  .highlighted {
+    padding-left: 12px;
+    border-left: 6px solid $lightBlue;
+    font-weight: bold;
+    color: $lightBlue;
+  }
 
-	.highlighted {
-		padding-left: 12px;
-		border-left: 6px solid $lightBlue;
-		font-weight: bold;
-		color: $lightBlue;
-	}
+  .adjust {
+    float: right;
+    width: $unit * 2.5;
+    margin: 9px;
+  }
 
-	.adjust {
-		float: right;
-		width: $unit * 2.5;
-		margin: 9px;
-	}
+  .small {
+    color: $lightGray;
+    font-size: 14px;
+  }
 
-	.small {
-		color: $lightGray;
-		font-size: 14px;
-	}
+  hr {
+    border: none;
+    border-top: 1px solid $lighterGray;
+    margin: 0;
+    margin-right: $unit;
+    clear: both;
+  }
 
-	hr {
-		border: none;
-		border-top: 1px solid $lighterGray;
-		margin: 0;
-		margin-right: $unit;
-		clear: both;
-	}
+  .help {
+    line-height: $unit * 2;
+    text-decoration: none;
+    color: $lightGray;
+    font-size: 14px;
+  }
 
-	.help {
-		line-height: $unit * 2;
-		text-decoration: none;
-		color: $lightGray;
-		font-size: 14px;
-	}
+  button {
+    width: $unit * 14;
+    height: $unit * 4;
+    border: none;
+    border-radius: $sixth * 2;
+    margin: (31px) 0 $unit 0;
+    font-size: 36px;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: $green;
+    color: white;
+    cursor: pointer;
+    text-shadow: 1px 1px 2px darken($green, 20%);
+    outline: none;
+  }
 
-	button {
-		width: $unit * 14;
-		height: $unit * 4;
-		border: none;
-		border-radius: $sixth * 2;
-		margin: (74px) 0 $unit 0;
-		font-size: 36px;
-		font-family: Helvetica, Arial, sans-serif;
-		background-color: $green;
-		color: white;
-		cursor: pointer;
-		text-shadow: 1px 1px 2px darken($green, 20%);
-		outline: none;
-	}
+  button:hover {
+    box-shadow: inset 0 0 24px darken($green, 15%);
+  }
 
-	button:hover {
-		box-shadow: inset 0 0 24px darken($green, 15%);
-	}
-
-	button:active {
-		background-color: darken($green, 10%);
-	}
-
+  button:active {
+    background-color: darken($green, 10%);
+  }
 }
 
 // ---- MEDIA QUERIES FOR PHONE SCREENS ---- //
 
 @media only screen and (max-width: 1000px) {
+  html {
+    width: 720px;
+  }
 
-	html {
-		width: 720px;
-	}
+  .wrapper {
+    position: relative;
+    width: $unit * 28;
+    margin: auto;
+  }
 
-	.wrapper {
-		position: relative;
-		width: $unit * 28;
-		margin: auto;
-	}
+  h1 {
+    height: $input;
+    line-height: $input + 3;
+    background-color: $lightBlue;
+    color: white;
+    padding-left: $unit;
+    border-top-left-radius: $sixth * 2;
+    border-top-right-radius: $sixth * 2;
+    margin-top: $unit;
+  }
 
-	h1 {
-		height: $input;
-		line-height: $input + 3;
-		background-color: $lightBlue;
-		color: white;
-		padding-left: $unit;
-		border-top-left-radius: $sixth * 2;
-		border-top-right-radius: $sixth * 2;
-		margin-top: $unit;
-	}
+  .row {
+    background-color: white;
+    border-top: none;
+    padding-top: $unit;
+    padding-left: $unit;
+    border-bottom-left-radius: $sixth * 2;
+    border-bottom-right-radius: $sixth * 2;
+  }
 
-	.row {
-		background-color: white;
-		border-top: none;
-		padding-top: $unit;
-		padding-left: $unit;
-		border-bottom-left-radius: $sixth * 2;
-		border-bottom-right-radius: $sixth * 2;
-	}
+  input {
+    height: $input;
+    width: $unit * 8;
+    padding-left: 8px;
+    background-color: $lightestGray;
+    font-size: 18px;
+    border: none;
+    border-radius: $sixth;
+    margin-right: $unit;
+    margin-bottom: $unit;
+  }
 
-	input {
-		height: $input;
-		width: $unit * 8;
-		padding-left: 8px;
-		background-color: $lightestGray;
-		font-size: 18px;
-		border: none;
-		border-radius: $sixth;
-		margin-right: $unit;
-		margin-bottom: $unit;
-	}
+  input::placeholder {
+    color: $coolGray;
+  }
 
-	input::placeholder {
-		color: $coolGray;
-	}
+  select {
+    height: $unit;
+    border: none;
+    background-color: $lightestGray;
+    border-radius: $sixth;
+  }
 
-	select {
-		height: $unit;
-		border: none;
-		background-color: $lightestGray;
-		border-radius: $sixth;
-	}
+  .leftSize {
+    width: $unit * 28;
+    margin-right: $unit;
+  }
 
-	.leftSize {
-		width: $unit * 28;
-		margin-right: $unit;
-	}
+  .rightSize {
+    width: $unit * 28;
+  }
 
-	.rightSize {
-		width: $unit * 28;
-	}
+  div.rightSize {
+    margin-bottom: $unit;
+  }
 
-	div.rightSize {
-		margin-bottom: $unit;
-	}	
+  .marginTop {
+    margin-top: $unit;
+  }
 
-	.marginTop {
-		margin-top: $unit;
-	}
+  .leftSelect {
+    height: $input;
+    margin-right: $unit;
+    margin-bottom: $unit;
+    font-size: 18px;
+  }
 
-	.leftSelect {
-		height: $input;
-		margin-right: $unit;
-		margin-bottom: $unit;
-		font-size: 18px;
-	}
+  .widthOne {
+    width: $unit * 8;
+  }
 
-	.widthOne {
-		width: $unit * 8;
-	}
+  .widthTwo {
+    width: $unit * 17;
+  }
 
-	.widthTwo {
-		width: $unit * 17;
-	}
+  .widthQuarter {
+    width: $unit * 5.75;
+  }
 
-	.widthQuarter {
-		width: $unit * 5.75;
-	}
+  .widthHA {
+    width: $unit * 5;
+  }
 
-	.widthHA {
-		width: $unit * 5;
-	}
+  .minusCheckbox {
+    width: $unit * 8 - 56;
+  }
 
-	.minusCheckbox {
-		width: $unit * 8 - 56;
-	}
+  .checkbox {
+    width: $input;
+    padding: 0;
+    margin: 0 $unit $unit 0;
+    float: right;
+  }
 
-	.checkbox {
-		width: $input;
-		padding: 0;
-		margin: 0 $unit $unit 0;
-		float: right;
-	}
+  .leftP {
+    float: left;
+    line-height: $unit * 2;
+  }
 
-	.leftP {
-		float: left;
-		line-height: $unit * 2;
-	}
+  .rightP {
+    float: right;
+    line-height: $unit * 2;
+    margin-right: $unit;
+    width: $unit * 3;
+    text-align: right;
+  }
 
-	.rightP {
-		float: right;
-		line-height: $unit * 2;
-		margin-right: $unit;
-		width: $unit * 3;
-		text-align: right;
-	}
+  .adjust {
+    float: right;
+    width: $unit * 2.5;
+    margin: $unit / 2;
+  }
 
-	.adjust {
-		float: right;
-		width: $unit * 2.5;
-		margin: $unit / 2;
-	}
+  .small {
+    color: $lightGray;
+    font-size: 14px;
+  }
 
-	.small {
-		color: $lightGray;
-		font-size: 14px;
-	}
+  hr {
+    border: none;
+    border-top: 1px solid $lighterGray;
+    margin: 0;
+    margin-right: $unit;
+    clear: both;
+  }
 
-	hr {
-		border: none;
-		border-top: 1px solid $lighterGray;
-		margin: 0;
-		margin-right: $unit;
-		clear: both;
-	}
+  .help {
+    line-height: $unit * 2;
+    text-decoration: none;
+    color: $lightGray;
+    font-size: 14px;
+  }
 
-	.help {
-		line-height: $unit * 2;
-		text-decoration: none;
-		color: $lightGray;
-		font-size: 14px;
-	}
+  button {
+    width: $unit * 26;
+    height: $unit * 4;
+    border: none;
+    border-radius: $sixth * 2;
+    margin: $unit 0 $unit 0;
+    font-size: 36px;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: $green;
+    color: white;
+    cursor: pointer;
+    text-shadow: 1px 1px 2px darken($green, 20%);
+    outline: none;
+  }
 
-	button {
-		width: $unit * 26;
-		height: $unit * 4;
-		border: none;
-		border-radius: $sixth * 2;
-		margin: $unit 0 $unit 0;
-		font-size: 36px;
-		font-family: Helvetica, Arial, sans-serif;
-		background-color: $green;
-		color: white;
-		cursor: pointer;
-		text-shadow: 1px 1px 2px darken($green, 20%);
-		outline: none;
-	}
+  button:hover {
+    box-shadow: inset 0 0 24px darken($green, 15%);
+  }
 
-	button:hover {
-		box-shadow: inset 0 0 24px darken($green, 15%);
-	}
-
-	button:active {
-		background-color: darken($green, 10%);
-	}
-
+  button:active {
+    background-color: darken($green, 10%);
+  }
 }
