--- a/style.css
+++ b/style.css
@@ -142,7 +142,10 @@ html {
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
-.screen-hide {
+.screen-hide-top {
+  display: none; }
+
+.info-side {
   display: none; }
 
 @media only screen and (min-width: 1000px) {
@@ -443,19 +446,19 @@ html {
   .checkbox {
     display: none; }
 
-  .screen-hide {
+  .screen-hide-top {
     display: flex;
     width: 100%;
-    padding: 0 1rem 0.5rem 1rem; }
-    .screen-hide img {
+    padding: 0.25rem 1.5rem 1rem 1.25rem; }
+    .screen-hide-top img {
       height: 60px; }
-    .screen-hide p {
+    .screen-hide-top p {
       font-size: 1.25rem;
       letter-spacing: 4px;
       width: calc(80% - 240px);
       padding-left: 0.75rem;
       line-height: 60px; }
-    .screen-hide aside {
+    .screen-hide-top aside {
       width: 20%;
       text-align: end;
       line-height: 60px;
@@ -467,33 +470,77 @@ html {
 
   .wrapper {
     width: 100%;
-    padding: 0 1.5rem; }
+    padding: 0 0.75rem 0.5rem 1.5rem; }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap; }
+
+  .rightSize {
+    margin-right: 0.75rem; }
+
+  .rightSize--print {
+    margin-top: 2rem;
+    margin-bottom: 0; }
+
+  .price-side {
+    flex-basis: 200px;
+    flex-grow: 1; }
+
+  hr {
+    margin: 8px 0; }
+
+  .info-side {
+    display: flex;
+    flex-basis: 200px;
+    flex-grow: 1;
+    margin-left: 2rem;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    justify-content: flex-end; }
+    .info-side p {
+      line-height: 1.5rem;
+      font-size: 12pt;
+      text-align: right; }
+    .info-side b {
+      font-weight: bold;
+      color: #00a0ff;
+      font-size: 1.25rem;
+      margin-bottom: -1.25rem;
+      display: block; }
 
   h1 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.5rem; }
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    color: #00a0ff;
+    font-weight: bold; }
 
   select,
   input {
     margin-right: 0.75rem;
     margin-bottom: 0.75rem;
-    padding: 0.25rem; }
+    padding: 0.25rem;
+    border: 1px solid gray; }
 
   .widthTwo {
-    width: calc(60% + 14px); }
+    flex-basis: 50%;
+    flex-grow: 2.25; }
 
   .widthOne,
   #exactGar,
   #exactScr,
   #exactQty,
   #additional {
-    width: 30%; }
+    flex-basis: 25%;
+    flex-grow: 1; }
 
   .widthQuarter {
-    width: calc(25% - 14px); }
+    width: 20%;
+    flex-grow: 1; }
 
   .widthHA {
-    width: 20%; }
+    width: 15%;
+    flex-grow: 1; }
 
   .leftP {
     display: inline; }
