--- a/style.scss
+++ b/style.scss
@@ -166,7 +166,11 @@ html {
   box-sizing: inherit;
 }
 
-.screen-hide {
+.screen-hide-top {
+  display: none;
+}
+
+.info-side {
   display: none;
 }
 
@@ -523,6 +527,8 @@ html {
 
 // ---- MEDIA QUERIES FOR PRINTING ---- //
 
+$grimes-blue: #00a0ff;
+
 @media print {
   #submit,
   .help,
@@ -531,10 +537,10 @@ html {
     display: none;
   }
 
-  .screen-hide {
+  .screen-hide-top {
     display: flex;
     width: 100%;
-    padding: 0 1rem 0.5rem 1rem;
+    padding: 0.25rem 1.5rem 1rem 1.25rem;
     img {
       height: 60px;
     }
@@ -560,12 +566,59 @@ html {
 
   .wrapper {
     width: 100%;
-    padding: 0 1.5rem;
+    padding: 0 0.75rem 0.5rem 1.5rem;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .rightSize {
+    margin-right: 0.75rem;
+  }
+
+  .rightSize--print {
+    margin-top: 2rem;
+    margin-bottom: 0;
+  }
+
+  .price-side {
+    flex-basis: 200px;
+    flex-grow: 1;
+  }
+
+  hr {
+    margin: 8px 0;
+  }
+
+  .info-side {
+    display: flex;
+    flex-basis: 200px;
+    flex-grow: 1;
+    margin-left: 2rem;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    p {
+      line-height: 1.5rem;
+      font-size: 12pt;
+      text-align: right;
+    }
+    b {
+      font-weight: bold;
+      color: $grimes-blue;
+      font-size: 1.25rem;
+      margin-bottom: -1.25rem;
+      display: block;
+    }
   }
 
   h1 {
-    margin-top: 0.75rem;
+    margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    color: $grimes-blue;
+    font-weight: bold;
   }
 
   select,
@@ -573,10 +626,12 @@ html {
     margin-right: 0.75rem;
     margin-bottom: 0.75rem;
     padding: 0.25rem;
+    border: 1px solid gray;
   }
 
   .widthTwo {
-    width: calc(60% + 14px);
+    flex-basis: 50%;
+    flex-grow: 2.25;
   }
 
   .widthOne,
@@ -584,15 +639,18 @@ html {
   #exactScr,
   #exactQty,
   #additional {
-    width: 30%;
+    flex-basis: 25%;
+    flex-grow: 1;
   }
 
   .widthQuarter {
-    width: calc(25% - 14px);
+    width: 20%;
+    flex-grow: 1;
   }
 
   .widthHA {
-    width: 20%;
+    width: 15%;
+    flex-grow: 1;
   }
 
   .leftP {
