--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ html {
     color: #aab0b6;
     font-size: 14px; }
 
-  button {
+  #submit {
     width: 336px;
     height: 96px;
     border: none;
@@ -295,10 +295,30 @@ html {
     text-shadow: 1px 1px 2px #457528;
     outline: none; }
 
-  button:hover {
+  #submit:hover {
     box-shadow: inset 0 0 24px #50882f; }
 
-  button:active {
+  #submit:active {
+    background-color: #5b9b35; }
+
+  #print-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #72bf44;
+    color: white;
+    border: none;
+    padding: 0.75rem 0.75rem 1rem 1rem;
+    border-bottom-left-radius: 1rem;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1rem;
+    text-shadow: 1px 1px 2px #457528; }
+
+  #print-button:hover {
+    box-shadow: inset 0 0 12px #50882f; }
+
+  #print-button:active {
     background-color: #5b9b35; } }
 @media only screen and (max-width: 1000px) {
   html {
@@ -420,7 +440,7 @@ html {
     color: #aab0b6;
     font-size: 14px; }
 
-  button {
+  #submit {
     width: 624px;
     height: 96px;
     border: none;
@@ -434,11 +454,14 @@ html {
     text-shadow: 1px 1px 2px #457528;
     outline: none; }
 
-  button:hover {
+  #submit:hover {
     box-shadow: inset 0 0 24px #50882f; }
 
-  button:active {
-    background-color: #5b9b35; } }
+  #submit:active {
+    background-color: #5b9b35; }
+
+  #print-button {
+    display: none; } }
 @media print {
   #submit,
   .help,
@@ -485,10 +508,15 @@ html {
 
   .price-side {
     flex-basis: 200px;
-    flex-grow: 1; }
+    flex-grow: 1;
+    font-size: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; }
 
   hr {
-    margin: 8px 0; }
+    margin: 8px 0;
+    width: 100%; }
 
   .info-side {
     display: flex;
@@ -499,18 +527,18 @@ html {
     flex-wrap: wrap;
     justify-content: flex-end; }
     .info-side p {
-      line-height: 1.5rem;
-      font-size: 12pt;
+      line-height: 18px;
+      font-size: 12px;
       text-align: right; }
     .info-side b {
       font-weight: bold;
       color: #00a0ff;
-      font-size: 1.25rem;
-      margin-bottom: -1.25rem;
+      font-size: 16px;
+      margin-bottom: -16px;
       display: block; }
 
   h1 {
-    margin-top: 0.5rem;
+    margin-top: 0.75rem;
     margin-bottom: 0.5rem;
     color: #00a0ff;
     font-weight: bold; }
@@ -543,9 +571,7 @@ html {
     flex-grow: 1; }
 
   .leftP {
-    display: inline; }
-    .leftP::after {
-      content: ' - '; }
+    display: block; }
 
-  .rightP {
-    display: inline; } }
+  #print-button {
+    display: none; } }
