--- a/style.scss
+++ b/style.scss
@@ -331,7 +331,7 @@ html {
     font-size: 14px;
   }
 
-  button {
+  #submit {
     width: $unit * 14;
     height: $unit * 4;
     border: none;
@@ -346,11 +346,34 @@ html {
     outline: none;
   }
 
-  button:hover {
+  #submit:hover {
     box-shadow: inset 0 0 24px darken($green, 15%);
   }
 
-  button:active {
+  #submit:active {
+    background-color: darken($green, 10%);
+  }
+
+  #print-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: $green;
+    color: white;
+    border: none;
+    padding: 0.75rem 0.75rem 1rem 1rem;
+    border-bottom-left-radius: 1rem;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1rem;
+    text-shadow: 1px 1px 2px darken($green, 20%);
+  }
+
+  #print-button:hover {
+    box-shadow: inset 0 0 12px darken($green, 15%);
+  }
+
+  #print-button:active {
     background-color: darken($green, 10%);
   }
 }
@@ -501,7 +524,7 @@ html {
     font-size: 14px;
   }
 
-  button {
+  #submit {
     width: $unit * 26;
     height: $unit * 4;
     border: none;
@@ -516,12 +539,16 @@ html {
     outline: none;
   }
 
-  button:hover {
+  #submit:hover {
     box-shadow: inset 0 0 24px darken($green, 15%);
   }
 
-  button:active {
+  #submit:active {
     background-color: darken($green, 10%);
+  }
+
+  #print-button {
+    display: none;
   }
 }
 
@@ -586,10 +613,15 @@ $grimes-blue: #00a0ff;
   .price-side {
     flex-basis: 200px;
     flex-grow: 1;
+    font-size: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   hr {
     margin: 8px 0;
+    width: 100%;
   }
 
   .info-side {
@@ -601,21 +633,21 @@ $grimes-blue: #00a0ff;
     flex-wrap: wrap;
     justify-content: flex-end;
     p {
-      line-height: 1.5rem;
-      font-size: 12pt;
+      line-height: 18px;
+      font-size: 12px;
       text-align: right;
     }
     b {
       font-weight: bold;
       color: $grimes-blue;
-      font-size: 1.25rem;
-      margin-bottom: -1.25rem;
+      font-size: 16px;
+      margin-bottom: -16px;
       display: block;
     }
   }
 
   h1 {
-    margin-top: 0.5rem;
+    margin-top: 0.75rem;
     margin-bottom: 0.5rem;
     color: $grimes-blue;
     font-weight: bold;
@@ -654,13 +686,14 @@ $grimes-blue: #00a0ff;
   }
 
   .leftP {
-    display: inline;
-    &::after {
-      content: ' - ';
-    }
+    display: block;
   }
 
   .rightP {
-    display: inline;
+    // justify-self: flex-end;
+  }
+
+  #print-button {
+    display: none;
   }
 }
