--- a/style.scss
+++ b/style.scss
@@ -376,6 +376,78 @@ html {
   #print-button:active {
     background-color: darken($green, 10%);
   }
+
+  #print-button:focus {
+    outline: none;
+  }
+
+  #copy-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $green;
+    color: white;
+    border: none;
+    padding: 0.75rem 1rem 1rem 0.75rem;
+    border-bottom-right-radius: 1rem;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1rem;
+    text-shadow: 1px 1px 2px darken($green, 20%);
+    z-index: 2;
+  }
+
+  #copy-button:hover {
+    box-shadow: inset 0 0 12px darken($green, 15%);
+  }
+
+  #copy-button:active {
+    background-color: darken($green, 10%);
+  }
+
+  #copy-button:focus {
+    outline: none;
+  }
+
+  .copy-modal__container {
+    display: flex;
+  }
+
+  #copy-modal {
+    position: absolute;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    p {
+      padding: 1rem;
+      background-color: white;
+      border: 1px solid gainsboro;
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+      border-top-left-radius: $sixth * 2;
+      border-bottom-left-radius: $sixth * 2;
+      color: black;
+    }
+    b {
+      font-weight: bold;
+    }
+    i {
+      font-style: italic;
+    }
+  }
+
+  #copy-close {
+    background-color: red;
+    color: white;
+    border-top-right-radius: $sixth * 2;
+    border-bottom-right-radius: $sixth * 2;
+    border: 1px solid red;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+    width: 2rem;
+  }
 }
 
 // ---- MEDIA QUERIES FOR PHONE SCREENS ---- //
@@ -547,7 +619,8 @@ html {
     background-color: darken($green, 10%);
   }
 
-  #print-button {
+  #print-button,
+  #copy-button {
     display: none;
   }
 }
