--- a/style.css
+++ b/style.css
@@ -173,7 +173,9 @@ html {
     padding-top: 24px;
     padding-left: 24px;
     border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px; }
+    border-bottom-right-radius: 8px;
+    display: flex;
+    flex-wrap: wrap; }
 
   input {
     height: 32px;
@@ -231,8 +233,7 @@ html {
   .checkbox {
     width: 32px;
     padding: 0;
-    margin: 0 24px 24px 0;
-    float: right; }
+    margin: 0 24px 24px 0; }
 
   #qty1,
   #qty2,
@@ -387,7 +388,9 @@ html {
     padding-top: 24px;
     padding-left: 24px;
     border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px; }
+    border-bottom-right-radius: 8px;
+    display: flex;
+    flex-wrap: wrap; }
 
   input {
     height: 32px;
@@ -446,8 +449,7 @@ html {
   .checkbox {
     width: 32px;
     padding: 0;
-    margin: 0 24px 24px 0;
-    float: right; }
+    margin: 0 24px 24px 0; }
 
   .leftP {
     float: left;
