--- a/style.scss
+++ b/style.scss
@@ -202,6 +202,8 @@ html {
     padding-left: $unit;
     border-bottom-left-radius: $sixth * 2;
     border-bottom-right-radius: $sixth * 2;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   input {
@@ -273,7 +275,6 @@ html {
     width: $input;
     padding: 0;
     margin: 0 $unit $unit 0;
-    float: right;
   }
 
   #qty1,
@@ -461,6 +462,8 @@ html {
     padding-left: $unit;
     border-bottom-left-radius: $sixth * 2;
     border-bottom-right-radius: $sixth * 2;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   input {
@@ -534,7 +537,6 @@ html {
     width: $input;
     padding: 0;
     margin: 0 $unit $unit 0;
-    float: right;
   }
 
   .leftP {
